--- a/stylesheets/extra.css
+++ b/stylesheets/extra.css
@@ -1,3 +1,13 @@
+
+
+
+body {
+    font-family: "JetBrains Mono", "Fira Code", "Consolas", "Liberation Mono", "Courier New", monospace;
+}
+
+/* old stuff: */
+
+
 /* Add vertical space between ToC links */
 #terminal-mkdocs-side-panel .terminal-mkdocs-side-nav-li {
   margin-bottom: 10px;
@@ -28,3 +38,5 @@ aside a {
   line-height: 1.6;
   display: inline-block;
 }
+
+
